stop jumping

--- a/src/components/withHooks/searchInput/searchInput.module.css
+++ b/src/components/withHooks/searchInput/searchInput.module.css
@@ -1,8 +1,4 @@
 .container{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
     width: 100%;
     border: solid 10px;
     border-color: lightseagreen;
@@ -16,4 +12,16 @@
     width: 224px;
     height: 254px;
     background-color: rgba(255, 228, 196, 0.959);
+}
+.title{
+    width: 100%;
+    height: 280px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.searcher_container{
+    width: 100%;
+    height: 300px;
+    padding-left: 6%;
 }
